--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drupal-coder - Поддержка сайтов на Drupal</title>
+    <title>Master-coder - Поддержка сайтов на Master</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <!-- Шапка с видеофоном -->
@@ -17,7 +17,7 @@
         <nav class="navbar">
             <div class="container">
                 <div class="navbar-content">
-                    <a href="#" class="logo">Drupal-coder</a>
+                    <a href="#" class="logo">Master-coder</a>
                     
                     <!-- Десктопное меню -->
                     <ul class="nav-menu">
@@ -71,10 +71,10 @@
         <div class="container">
             <div class="header-content">
                 <h1 class="header-title">
-                    Поддержка сайтов<br>на Drupal
+                    Поддержка сайтов<br>на Master
                 </h1>
                 <p class="header-subtitle">
-                    13 лет совершенствуем компетенции в Drupal поддержке!
+                    13 лет совершенствуем компетенции в Master поддержке!
                 </p>
                 <p class="header-text">
                     Разрабатываем и оптимизируем модули, расширяем функциональность сайтов, обновляем дизайн
@@ -89,7 +89,7 @@
         <!-- Секция услуг -->
         <section class="services" id="support">
             <div class="container">
-                <h2 class="section-title">Поддержка сайтов от Drupal-coder</h2>
+                <h2 class="section-title">Поддержка сайтов от Master-coder</h2>
                 <div class="services-grid">
                     <div class="service-card">
                         <div class="service-icon">📝</div>
@@ -109,15 +109,15 @@
                     </div>
                     <div class="service-card">
                         <div class="service-icon">🛡️</div>
-                        <h3>Аудит и мониторинг безопасности Drupal сайтов</h3>
+                        <h3>Аудит и мониторинг безопасности Master сайтов</h3>
                     </div>
                     <div class="service-card">
                         <div class="service-icon">🚀</div>
-                        <h3>Миграция, импорт контента и апгрейд Drupal</h3>
+                        <h3>Миграция, импорт контента и апгрейд Master</h3>
                     </div>
                     <div class="service-card">
                         <div class="service-icon">⚡</div>
-                        <h3>Оптимизация и ускорение Drupal-сайтов</h3>
+                        <h3>Оптимизация и ускорение Master-сайтов</h3>
                     </div>
                     <div class="service-card">
                         <div class="service-icon">📈</div>
@@ -130,7 +130,7 @@
         <!-- Секция поддержки -->
         <section class="support-features">
             <div class="container">
-                <h2 class="section-title">Поддержка от Drupal-coder</h2>
+                <h2 class="section-title">Поддержка от Master-coder</h2>
                 <div class="features-grid">
                     <div class="feature-card">
                         <div class="feature-number">01</div>
@@ -284,7 +284,7 @@
                 <div class="footer-info">
                     <h3>Master-coder</h3>
                     <p>Проект ООО «Иннитлаб», Краснодар, Россия.<br>
-                    Мастер является зарегистрированной торговой маркой Dries Buytaert.</p>
+                    Master является зарегистрированной торговой маркой Dries Buytaert.</p>
                 </div>
                 <div class="footer-contacts">
                     <h4>Контакты</h4>
@@ -293,12 +293,12 @@
                 </div>
             </div>
             <div class="footer-copyright">
-                <p>© 2026 Master-coder. Все права защищены.</p>
+                <p>© 2023 Master-coder. Все права защищены.</p>
             </div>
         </div>
     </footer>
 
-    <script src="js/main.js"></script>
-    <script src="js/form.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/form.js"></script>
 </body>
 </html>
